Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -206,7 +206,6 @@ This study tests the hypothesis that more vertical levels of political organisat
 
 %First, we will go through previous research, secondly, we will have an overview of the region given the variables we are using in the study. Thirdly, the method will be presented and lastly we will go through the results and possible interpretations of them.
 
- 
 \FloatBarrier
 \section{Previous research}
 \label{sec:previous_research}
@@ -230,15 +229,21 @@ This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acy
 
 In a similar vein, \citet{curriemace2009} suggests that more stratified societies are correlated with larger language areas in Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometre is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reducing diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. The approach is different from \citet{pawley81, pawley2007}, but the scientific line of argumentation is congruent.
 
-Returning to Oceania; all indigenous communities of Remote Oceania (see Fig \ref{RO_overnight_coloured_dots}) speak languages of the Austronesian family. This family has its ultimate origins in Taiwan, and spread into the region approximately 3-4,000 years ago.
+Returning to language richness in Remote Oceania; a significant factor to consider is contact --- in particular with people from New Guinea, Solomons and the Bismarck archipelago. Prior to western colonisation, all indigenous communities of Remote Oceania spoke the languages of the Austronesian family (see Fig \ref{RO_overnight_coloured_dots}). This family has its ultimate origins in Taiwan, and spread into the region approximately 3-4,000 years ago (c.f. Fig. \ref{austro_expansion_bellwood}). The peopling of New Guinea, the Bismarck archipelago and Solomons however is older than that, and there is a great amount of language and cultural diversity there that may have influenced Austronesian people during and after their journeys east. 
 
+\begin{figure}[ht]
+\centering
+\includegraphics[width=15cm]{ANU_cartography.jpg}
+\caption{Map of the expansion of the Austronesian language family, based on work by Peter Bellwood. Map made by ANU CartoGIS and Peter Bellwood.}
+\label{austro_expansion_bellwood}
+\end{figure}
 
-\citet[104]{lynch1981melanesian} has stressed the relevance of contact with non-Austroneisan communities from New Guinea, Bismarck, Bougainville and the Solomon Islands as a key factor in explaining why there are more languages in Vanuatu compared to the rest of Oceania \footnote{\citet{lynch1981melanesian} uses the terms ``Papuan'' and contrasts Melanesia and Polynesia. I have chosen to summarise him here in more precise terms in relation to how his work impacts the current study. He writes specifically about the influence of languages of New Britain, Bougainville, central Solomon Islands, Manus and the southeast of New Guinea mainland (Oro province, Milne Bay province and National Capital District) on Oceanic languages of those regions and in Temotu.}. Lynch does not offer a precise account but outlines several different potential scenarios whereby contact with non-Austronesian groups caused greater diversification among Oceanic languages.
+Recent studies of ancient DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking communities from New Guinea and Solomons among Vanuatu people. Likewise, further studies such as \citet{liu2022ancient} show similar influence from New Guinea and Solomons northwards in Palau, Chuuk and Pohnpei island groups. It is becoming increasingly clear in the overall scientific literature on the ancient history of Oceania that there were a lot more connections and interactions than previously postulated. It is not the case that people travelled to one place, and then stayed put there with little influence from other people of Oceania. Oceania is an interconnected place today, and it was historically too.
 
-Recent studies of ancient DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking  communities from New Guinea and Solomons among Vanuatu people. Likewise, further studies such as \citet{liu2022ancient} show similar influence from New Guinea and Solomons northwards in Palau, Chuuk and Pohnpei island groups. It is becoming increasingly clear in the overall scientific literature on the ancient history of Oceania that there were a lot more connections and interactions than previously postulated. It is not the case that people travelled to one place, and then stayed put with little influence from other people of Oceania. Oceania is an interconnected place today, and it was historically too.
+It is possible that these interactions, which were more frequent in Vanuatu than in Polynesia, have implications for many domains of human life --- including political organisation and language diversity. Linguist and anthropologist \citet[104]{lynch1981melanesian} has stressed the relevance of contact with non-Austroneisan communities from New Guinea, Bismarck, Bougainville and the Solomon Islands as a key factor in explaining why there are more languages in Vanuatu compared to the rest of Oceania \footnote{\citet{lynch1981melanesian} uses the terms ``Papuan'' and contrasts Melanesia and Polynesia. I have chosen to summarise him here in more precise terms in relation to how his work impacts the current study. He writes specifically about the influence of languages of New Britain, Bougainville, central Solomon Islands, Manus and the southeast of New Guinea mainland (Oro province, Milne Bay province and National Capital District) on Oceanic languages of those regions and in Temotu.}. Lynch does not offer a precise account but outlines several different potential scenarios whereby contact with non-Austronesian groups caused greater diversification among Oceanic languages.
 
+Unfortunately, it is difficult to incorporate data on contact with non-Austronesian speakers explicitly in the models of this study. This is primarily due to lack of information on this variable in island groups such as Kanaky (New Caledonia), Ratak \& Ralik (Marshall Islands), Marquesas, Aotearoa and other island groups. However, this factor is very important and we will return to it in the discussions.
 
-These results from studies of ancient genomes lend support to the hypothesis that there was contact between Austronesian and non-Austronesian people from the islands of New Guinea and Solomons people in ancient times. This in turn, could be linked to the differences in political structure \emph{as well as} the language diversification.
 %could have impacted the differences in language diversification rates that we see in the region. However, unfortunately, there is not enough data for this to be included as a factor in the analysis of this study but it may be approximated by proxy-variables such as time depth of settlement
 
 
@@ -246,18 +251,15 @@ These results from studies of ancient genomes lend support to the hypothesis tha
 
 %\footnote{Note that this is separate from theories of effects of culture and environment on the \emph{nature} of language, such as the work by \citet{wraygrace2007}, \citet{lupyandale2010} and \citet{raviv2019compositional}. Their work focusses on why different kinds of interactional patterns has consequences for the compositionality/complexity of a language. For this study, we are concentrating on linguistic \emph{diversity} as opposed to \emph{disparity}.}.
 
-There has been a growing interest in environmental and demographic effects on language diversification\footnote{For a longer summary of recent studies of language diversification, see \citet{gavin2013toward} and \citet{greenhill2015demographic}.}. One of the oldest and most influential bodies of work in this vein is by Nettle. \citet{NETTLE1998} showed that there is a correlation between number of languages per country and ecological risk (as measured by mean growing season). Nettle suggests that high risk environments encourage wider social networks and therefore reduce the number of languages in that area. In a more recent paper, \citet{hua2019ecological} constructed a more complex and fine grained model of how environmental factors influence language diversity. They found that factors associated with risk (precipitation and temperature seasonality and season length) predict much of the distribution of languages in the world. Similarly, \citet{gavin2017process} showed that a simple model that takes into account rainfall and an upper bound of population size can to a large extent predict the distribution of indigenous languages in Australia. Given the success of these models, amount and seasonality of rainfall and temperature variables are also included in our model predicting language diversity in Remote Oceania. 
-
-Another environmental factor that has been used in previous studies is island isolation. How distant are the islands from each other, or from a large landmass? This is a common variable in studies of species richness  in biology. The theory is that the more isolated an island is, the harder it is to reach for plants and animals --- the lower the immigration rate and therefore lower biological diversity. It has been shown, among other results, that isolation can account for 85\%-90\% of variance of species richness in birds on islands \citep{kalmar2006global}. \citet{terrell1976island} suggested that isolation may also be helpful in explaining the distribution of languages over islands of Near Oceania. The more isolated an island is, the fewer people would reach it and this would lead to lower cultural diversity as well as biodiversity. In a recent study, \citet{gavin2012island} showed that isolation is indeed a relevant factor in explaining language diversity in Oceania at large. 
-
-However, while isolation and other environmental factors significantly explained much of the distribution of languages in their study, it did not account for as much as in studies of biological species. In her description of S\={a}moa, \citet[287]{mead1937samoans} writes of an economy of plenty which still maintains cultural homogenity over several islands. This would seem to contradict the ecological risk hypothesis. \citet{gavin2012island} conclude that human diversity may also be influenced by social, economic and political factors. This aligns well with the theories of Oceanic scholars. Results from this study may contribute to our understanding of these factors.
+Finally, there has been a growing interest in environmental effects on language diversification\footnote{For a longer summary of recent studies of language diversification, see \citet{gavin2013toward} and \citet{greenhill2015demographic}.}. One of the oldest and most influential bodies of work in this vein is by Nettle. \citet{NETTLE1998} showed that there is a correlation between number of languages per country and ecological risk (as measured by mean growing season). Nettle suggests that high-risk environments encourage wider social networks and therefore reduce the number of languages in that area. In a more recent paper, \citet{hua2019ecological} constructed a more complex and fine grained model of how environmental factors influence language diversity. They found that factors associated with risk (precipitation and temperature seasonality and season length) predict much of the distribution of languages in the world. Similarly, \citet{gavin2017process} showed that a simple model that takes into account rainfall and an upper bound of population size can to a large extent predict the distribution of indigenous languages in Australia. Given the success of these models, the amount and seasonality of rainfall and temperature variables are also included in our model predicting language diversity in Remote Oceania. 
 
 
 %There are many more papers on demographic, cultural and environmental factors on language diversification, unfortunately there is not space enough here to relate them all. There are two overview papers that summarises many other studies on the topic very well --- \citet{gavin2013toward} and \citet{greenhill2015demographic}. I will refrain from copying their clear and instructive summaries and meta-analysis and instead direct the curious reader to seek those two papers out themselves should they want to explore the topic further.
 
-Similarly, in their study of global environmental predictors of language diversification, \citet{hua2019ecological} noted that there were certain areas that remained unexplained (New Guinea, Himalayas, West Africa and Mesoamerica). This may be an indication that the model needs to be adjusted to account for more variables or that the variables do not have the same effect globally. A recent study of language diversification in North America \citep{Pacheco_Coelho_2019} showed that the best predictors of language change may vary from place to place and that the factors are interlinked causally in a complex manner. Their study included environmental variables and data on population. The authors note that political complexity might be an important variable too, but they were unfortunately unable to include it \citep[7]{Pacheco_Coelho_2019}.
+In their study of global environmental predictors of language diversification, \citet{hua2019ecological} noted that there were certain areas that remained unexplained (New Guinea, Himalayas, West Africa and Mesoamerica). This may be an indication that the model needs to be adjusted to account for more variables or that the variables do not have the same effect globally. A recent study of language diversification in North America \citep{Pacheco_Coelho_2019} showed that the best predictors of language change may vary from place to place and that the factors are interlinked causally in a complex manner. Their study included environmental variables and data on the population. The authors note that political complexity might be an important variable too, but they were, unfortunately, unable to include it \citep[7]{Pacheco_Coelho_2019}.
 
-This study focuses on a particular hypothesis in a particular region of the world. It is possible that these models perform less well globally and the results should primarily be compared against the specific theories of \citet{lynch1981melanesian} and \citet{pawley81, pawley2007} about Remote Oceania. As one of the few studies to include data on both environmental and socio-cultural variables, it may however still be able to contribute a valuable perspective to the field of language diversity mechanics.
+This study focuses on a particular hypothesis concerning a particular region of the world. It is possible that these models perform less well globally and the results should primarily be compared against the specific theories of \citet{lynch1981melanesian} and \citet{pawley81, pawley2007} about Remote Oceania. As one of the few studies to include data on both environmental and socio-cultural variables, it is able to contribute a valuable perspective to the field of language diversity mechanics.
+
 \FloatBarrier
 
 %The cultural variables in this study are taken from D-PLACE \citep{d_place_all}, environmental data from ecoClimate \citep{ecoclimate} and archealogical dates from \citet{rieth_cochrane_2018}. The cultural variable of ``political complexity'' has been complemented with datasets from \citet{sheehan2018coevolution} and ethnographic sources. The archaeological dates were also further supplemented with data from \citet{levin_seikel_miles_2019, pol_outliers_stat_art, intoh2008ongoing, intoh2007reconnaissance} and \citet{Napolitano_et_al_yap}. 
@@ -267,7 +269,9 @@ This study focuses on a particular hypothesis in a particular region of the worl
 \FloatBarrier
 \section{Materials and Method}
 \label{pol_complex_method}
-The approach of this paper is to gather data on island groups and their societies in order to fit a statistical model such that we can evaluate which factors are the best at explaining the observed number of languages when they are co-estimated quantitatively. We use two different ways of grouping islands: overnight sailing distances and shared language (see appendix \ref{sec:island_geo} for details).
+The approach of this paper is to gather data on island groups and their societies and then fit a statistical model such that we can evaluate which factors are the best at explaining the observed number of languages when they are co-estimated quantitatively. 
+
+The unit of analysis is ``island group''. We cannot use modern political boundaries, and as we want to capture something about the communities at large we are not satisfied with using individual islands. For these reasons, we use two different ways of grouping islands: overnight sailing distances and shared language (see appendix \ref{sec:island_geo} for details).
 
 %Predicting_lgs_DAG_full
 
@@ -275,7 +279,7 @@ The data for this study consists of:
 
 \begin{itemize}
 \item language classification, based on \citet{glottolog40} and other sources (see Appendix \ref{sec:language_class}).
-\item number of vertical levels of political structure per society, based on the Ethnographic Atlas variable EA033 \citep{gray1998ethnographic, d_place_all}, \citet{sheehan2018coevolution} and own modiciations. Also known as ``political complexity''. (See appendix \ref{appendix_def_pol_complex} for details.)
+\item number of vertical levels of jurisdictional hierarchy per society \footnote{Nota Bene that there are other kinds of political complexity besides vertical}, based on the Ethnographic Atlas variable EA033 \citep{gray1998ethnographic, d_place_all}, \citet{sheehan2018coevolution} and own modifications. Also known as ``political complexity''. (See appendix \ref{appendix_def_pol_complex} for details.)
 \item archaeological dates \citep{intoh2007reconnaissance, intoh2008ongoing, rieth_cochrane_2018, levin_seikel_miles_2019, pol_outliers_stat_art, Napolitano_et_al_yap}. (See appendix \ref{appendix_def_dates} for details.)
 \item environmental data from \citet{ecoclimate}: mean temperature, temperature seasonality, mean rainfall and rainfall seasonality. (See appendix \ref{appendix_environ} for details.)
 \item island geography (area, latitude, shoreline and isolation) from Global Self-consistent, Hierarchical, High-resolution Geography Database (GSHHG) \citep{wessel1996global}.  (See appendix \ref{appendix_environ} for details.)
@@ -615,6 +619,12 @@ In some instances, it may be that ``local community'' and ``society'' are one an
   
 Political complexity (EA033) as a variable is observed per society, i.e. it does \emph{not} capture relationships \emph{between} distinct societies. It also does not track the political structure \emph{within} the local community\footnote{Ethnographic Atlas variable 32 captures jurisdictional hierarchies \emph{within} local communities.} or \emph{horizontal} political relationships within a society (e.g. political relationships between equal genealogical groups). It specifically measures \emph{vertical} jurisdictional levels \emph{within} a given society, \emph{beyond} the local community. Furthermore, it targets ``jurisdictional'' authority --- not just the existence of rank. In other words, the levels of authority need to be tied to some kind of jurisdictional power, most likely the power to exert punishment for transgressions and possibly also to declare warfare upon other societies. This is important because readers unfamiliar with these particular characteristics of ``political complexity'' as defined by EA033 may assume that horizontal relationships or relationships of debt (i.e. not jurisdictional) are included. 
 
+
+
+\citep{damon2002kula}
+
+%kula_ring_damon
+
 The possible values societies can take for this variable of political complexity are:
 
 \begin{enumerate}
@@ -645,7 +655,7 @@ This way of characterising political structure aligns well with ethnographic acc
 \label{meleiseapyramid}
 \end{figure}
 
-However, this framework is less easy to apply to the Melanesian islands of Remote Oceania where political structure often is described more in terms of autonomous and equal groups organised into horizontal structures such as exchange networks --- both within and between societies (c.f. \citet{bonnemaison1996graded} and \citet{huffman1996trading}). \citet{bolton1998chief} points out that the very concept of ``chief'' is new to Vanuatu, writing that chiefs were first introduced by Europeans to fill the role of ``representative for a community towards outsiders'' and then transformed into ``representative for traditional culture (kastom)'' \citep[185]{bolton1998chief}. In this thesis, political complexity is assumed to be a proxy measurement of social network cohesiveness (c.f. \citet{grace_1992_aberrant}). Differences between modern Vanuatu ``chiefs'' and pre-European political structures are therefore unlikely to be large enough to give rise to dramatically different scores in this metric. As has been shown in previous studies, while this metric may be coarse grained and not capture all the nuances of political life in the region, it appears to still be useful in testing hypotheses such as the one investigated in this study.
+However, this framework is less easy to apply to the Melanesian islands of Remote Oceania where political structure often is described more in terms of autonomous and equal groups organised into horizontal structures such as exchange networks --- both within and between societies (c.f. \citet{bonnemaison1996graded} and \citet{huffman1996trading}). \citet{bolton1998chief} points out that the very concept of ``chief'' is new to Vanuatu, writing that chiefs were first introduced by Europeans to fill the role of ``representative for a community towards outsiders'' and then transformed into ``representative for traditional culture (kastom)'' \citep[185]{bolton1998chief}. In this study, political complexity is assumed to be a proxy measurement of social network cohesiveness (c.f. \citet{grace_1992_aberrant}). Differences between modern Vanuatu ``chiefs'' and pre-European political structures are therefore unlikely to be large enough to give rise to dramatically different scores in this metric. As has been shown in previous studies, while this metric may be coarse grained and not capture all the nuances of political life in the region, it appears to still be useful in testing hypotheses such as the one investigated in this study.
 
 %, it may still be valuable to us in a) operationalising the hypothesis of Turner/Sahlins/Pawley
 
@@ -816,6 +826,13 @@ All measurements, except the response variable, were scaled and centred to make 
 
 
 This dataset does not contain information on population size because there is no resource with sufficient coverage for all of the island groups. \citet{raviv2019larger} and other studies have shown that community size may influence language diversification independently from network structure. I am including variables that may correlate with population size, such as area, rainfall and temperature. It is possible to interpret the effect of those variables as related to population size.
+
+
+%Another environmental factor that has been used in previous studies is island isolation. How distant are the islands from each other, or from a large landmass? This is a common variable in studies of species richness  in biology. The theory is that the more isolated an island is, the harder it is to reach for plants and animals --- the lower the immigration rate and therefore lower biological diversity. It has been shown, among other results, that isolation can account for 85\%-90\% of variance of species richness in birds on islands \citep{kalmar2006global}. \citet{terrell1976island} suggested that isolation may also be helpful in explaining the distribution of languages over islands of Near Oceania. The more isolated an island is, the fewer people would reach it and this would lead to lower cultural diversity as well as biodiversity. In a recent study, \citet{gavin2012island} showed that isolation is indeed a relevant factor in explaining language diversity in Oceania at large. 
+
+%However, while isolation and other environmental factors significantly explained much of the distribution of languages in their study, it did not account for as much as in studies of biological species. In her description of S\={a}moa, \citet[287]{mead1937samoans} writes of an economy of plenty that still maintains cultural homogeneity over several islands. This would seem to contradict the ecological risk hypothesis. \citet{gavin2012island} conclude that human diversity may also be influenced by social, economic and political factors. This aligns well with the theories of Oceanic scholars. Results from this study may contribute to our understanding of these factors.
+
+
 
 \begin{sidewaysfigure}[p] 
 \centering
