--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -2896,6 +2896,16 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
   address = {{Canberra}}
 }
 
+@article{damon2002kula,
+  title={Kula valuables: The problem of value and the production of names},
+  author={Damon, Frederick H},
+  journal={L’homme},
+  number={2},
+  pages={107--136},
+  year={2002},
+  publisher={Cairn/Softwin}
+}
+
 @article{lipson_harvad_ancient_dna_vanuatu_2018,
   title = {Population {{Turnover}} in {{Remote Oceania Shortly}} after {{Initial Settlement}}},
   author = {Lipson, Mark and Skoglund, Pontus and Spriggs, Matthew and Valentin, Frederique and Bedford, Stuart and Shing, Richard and Buckley, Hallie and Phillip, Iarawai and Ward, Graeme K. and Mallick, Swapan and Rohland, Nadin and Broomandkhoshbacht, Nasreen and Cheronet, Olivia and Ferry, Matthew and Harper, Thomas K. and Michel, Megan and Oppenheimer, Jonas and Sirak, Kendra and Stewardson, Kristin and Auckland, Kathryn and Hill, Adrian V.S. and Maitland, Kathryn and Oppenheimer, Stephen J. and Parks, Tom and Robson, Kathryn and Williams, Thomas N. and Kennett, Douglas J. and Mentzer, Alexander J. and Pinhasi, Ron and Reich, David},
