--- a/latex/main.tex
+++ b/latex/main.tex
@@ -275,19 +275,21 @@ The unit of analysis is ``island group''. We cannot use modern political boundar
 
 %Predicting_lgs_DAG_full
 
+
+A simple test of Spearman's Rank Order correlation reveals that the number of languages and political complexity per island group are indeed correlated (rho  = -0.4, \emph{p} value = >0.001 for islands grouped for shared language). However, this is not sufficient. We want to investigate whether this correlation still holds once we incorporate other variables that we expect might explain language diversity as well, such as time-depth and environmental factors
+
 The data for this study consists of:
 
 \begin{itemize}
 \item language classification, based on \citet{glottolog40} and other sources (see Appendix \ref{sec:language_class}).
-\item number of vertical levels of jurisdictional hierarchy per society \footnote{Nota Bene that there are other kinds of political complexity besides vertical}, based on the Ethnographic Atlas variable EA033 \citep{gray1998ethnographic, d_place_all}, \citet{sheehan2018coevolution} and own modifications. Also known as ``political complexity''. (See appendix \ref{appendix_def_pol_complex} for details.)
-\item archaeological dates \citep{intoh2007reconnaissance, intoh2008ongoing, rieth_cochrane_2018, levin_seikel_miles_2019, pol_outliers_stat_art, Napolitano_et_al_yap}. (See appendix \ref{appendix_def_dates} for details.)
-\item environmental data from \citet{ecoclimate}: mean temperature, temperature seasonality, mean rainfall and rainfall seasonality. (See appendix \ref{appendix_environ} for details.)
-\item island geography (area, latitude, shoreline and isolation) from Global Self-consistent, Hierarchical, High-resolution Geography Database (GSHHG) \citep{wessel1996global}.  (See appendix \ref{appendix_environ} for details.)
+\item number of vertical levels of jurisdictional hierarchy per society \footnote{Nota Bene that there are other kinds of political complexity besides vertical, for example horizontal complex exchange networks. See Appendix \ref{appendix_def_pol_complex} for more.}, based on the Ethnographic Atlas variable EA033 \citep{gray1998ethnographic, d_place_all}, \citet{sheehan2018coevolution} and own modifications. Also known as ``political complexity''. (See appendix \ref{appendix_def_pol_complex} for details.)
+\item archaeological dates, grouped into waves \citep{intoh2007reconnaissance, intoh2008ongoing, rieth_cochrane_2018, levin_seikel_miles_2019, pol_outliers_stat_art, Napolitano_et_al_yap}. (See appendix \ref{appendix_def_dates} for details.)
+\item historical environmental data from \citet{ecoclimate}: mean temperature, temperature seasonality, mean rainfall and rainfall seasonality. (See appendix \ref{appendix_environ} for details.)
+\item environmental data from NASA satellites \citep{running2021modis_aqua, running2021modis_terra}: Net Primary Productivity. See appendix \ref{appendix_environ} for details.)
+\item island geography (latitude and shoreline) from Global Self-consistent, Hierarchical, High-resolution Geography Database (GSHHG) \citep{wessel1996global}.  (See appendix \ref{appendix_environ} for details.)
 \end{itemize}
 
-A simple test of Spearman's Rank Order correlation reveals that the number of languages and political complexity per island group are indeed correlated (rho  = -0.4, \emph{p} value = >0.001 for islands grouped for shared language). However, we want to investigate whether this correlation still holds once we incorporate other variables that we expect might explain language diversity as well, such as time-depth and environmental factors
-
-In order to create a formula for the statistical model, we consider the estimated causal relationships based on previous research and scientific knowledge of the world (see section \ref{sec:previous_research}). These can be represented in a Directed Acyclic Graph and there are set procedures for how to prune and translate a DAG for modelling (\citet{pearl1995causal} and \citet{mcelreath2020statistical}). Fig. \ref{Predicting_lgs_DAG_slimmed} shows the smaller DAG that represents the final model formula. For the full DAG, including variables with missing data, see appendix \ref{appendix_DAG_def}.
+In order to create a formula for the statistical model, we consider the estimated causal relationships based on previous research and scientific knowledge of the world (see section \ref{sec:previous_research}). These can be represented in a Directed Acyclic Graph and there are set procedures for how to prune and translate a DAG for modelling (\citet{pearl1995causal} and \citet{mcelreath2020statistical}). Fig. \ref{Predicting_lgs_DAG_slimmed} shows the smaller DAG that represents the final model formula. For the full DAG, including excluded variables and variables with missing data, see appendix \ref{appendix_DAG_def}.
 
 \begin{figure}[ht]
 \centering
@@ -301,18 +303,18 @@ This resulted in the following model formula\footnote{Settlement order was rever
 \begin{quotation}
 
 \texttt{Number of languages \textasciitilde{} Political complexity (mode)} + \\
-\indent \indent \texttt{PCA1\_carrying\_density  :  Shoreline (log10 +} \\
-\indent \indent\texttt{PCA2\_carrying\_density  :  Shoreline (log10 +} \\
-\indent \indent (\texttt{PCA3\_carrying\_density  :  Shoreline (log10) +} \footnote{For the island groups based on shared languages, the optimal number of Principal Components from the Non Graphical Cattel's Scree Test was three, but for the overnight sailing-distance groups two.})\\
-\indent \indent\texttt{Settlement order :  Shoreline (log10)} \\
+\indent \indent \texttt{PCA1\_carrying\_density  *  Shoreline (log10 +} \\
+\indent \indent\texttt{PCA2\_carrying\_density  *  Shoreline (log10 +} \\
+\indent \indent (\texttt{PCA3\_carrying\_density  *  Shoreline (log10) +} \footnote{For the island groups based on shared languages, the optimal number of Principal Components from the Non Graphical Cattel's Scree Test was three, but for the overnight sailing-distance groups two.})\\
+\indent \indent\texttt{Settlement order *  Shoreline (log10)} \\
 
 \end{quotation}
 
-Shoreline was log-10-transformed. All variables were also scaled between 0 and 1 so as to make the coefficients directly comparable and interpretable.
+Shoreline was log-10-transformed. All variables were also scaled between 1 and 2 so as to make the coefficients directly comparable and interpretable and make interactions natural.
 
 To test the impact of several variables predicting the same response variable we can use a Bayesian Regression Model  \citep{burkner2017brms}. The distribution of languages per island group is a kind of count data and it is over-dispersed (c.f. \citet[4-5]{gavin2012island}). There are many island groups with one language and a few with higher numbers (see Figs. \ref{polygon_plot_SBZR} and \ref{polygon_plot_medium} in Appendix \ref{sec:island_geo}). For the overnight-sailing island groups, the group that contains Vanuatu and Temotu has 130 languages. This skewed distribution necessitates a Poisson distribution for the response variable in the model, which is able to adjust the relationship between the mean and the variance appropriately\footnote{This issue was also faced by \citet{gavin2012island} in their study of environmental factors in language diversification in the Pacific. They chose another approach, a reciprocal transformation, based on model fitness compared to two other kinds of transformations of the response variable.}.
 
-Due to missing data, we are testing our models over 65 out of 104 shared language groups and 56 out of 67 overnight distance groups. This sample has been constructed such that it still contains some of our more extreme sites, like Santo, Kanaky (New Caledonia mainland) and Malakula. Variables that did not cover Vanuatu and New Caledonia with enough data-points are not included in this study, for example population data or jurisdictional hierarchy within local communities. 
+Due to missing data, we are testing our models over 65 out of 104 shared language groups and 56 out of 67 overnight distance groups. This sample still contains some of our more extreme sites, like Santo, Kanaky (New Caledonia mainland) and Malakula. Variables that did not cover Vanuatu and New Caledonia with enough specific data-points are not included in this study, for example historic population data, non-austronesian gene flow or jurisdictional hierarchy within local communities. 
 
 The results were calculated in R 3.6.0 \citep{R} using the function \texttt{brms::brm()} \citep{burkner2017brms}, tidyverse suite \citep{tidyverse13} and the modEvA-package \citep{barbosa2016package}. For a full list of packages used, see appendix \ref{appendix_r_packages}.
 
@@ -617,13 +619,17 @@ It is not possible to give more detail to the definition of ``society'' as emplo
 
 In some instances, it may be that ``local community'' and ``society'' are one and the same. For example, the total population for the ``ethnic group'' (variable EA202) of the society Tikopia is 1,300 which is not that much larger than the mean size of the local community (EA031) noted above. On the other hand, the total population of the ethnic group of Ponape is 8,000, which would result in an estimate of 160 local communities given the value of mean size of local community (EA031).
   
-Political complexity (EA033) as a variable is observed per society, i.e. it does \emph{not} capture relationships \emph{between} distinct societies. It also does not track the political structure \emph{within} the local community\footnote{Ethnographic Atlas variable 32 captures jurisdictional hierarchies \emph{within} local communities.} or \emph{horizontal} political relationships within a society (e.g. political relationships between equal genealogical groups). It specifically measures \emph{vertical} jurisdictional levels \emph{within} a given society, \emph{beyond} the local community. Furthermore, it targets ``jurisdictional'' authority --- not just the existence of rank. In other words, the levels of authority need to be tied to some kind of jurisdictional power, most likely the power to exert punishment for transgressions and possibly also to declare warfare upon other societies. This is important because readers unfamiliar with these particular characteristics of ``political complexity'' as defined by EA033 may assume that horizontal relationships or relationships of debt (i.e. not jurisdictional) are included. 
+Political complexity (EA033) as a variable is observed per society, i.e. it does \emph{not} capture relationships \emph{between} distinct societies. It also does not track the political structure \emph{within} the local community\footnote{Ethnographic Atlas variable 32 captures jurisdictional hierarchies \emph{within} local communities.} or \emph{horizontal} political relationships within a society (e.g. political relationships between equal genealogical groups). It specifically measures \emph{vertical} jurisdictional levels \emph{within} a given society, \emph{beyond} the local community. Furthermore, it targets ``jurisdictional'' authority --- not just the existence of rank. In other words, the levels of authority need to be tied to some kind of jurisdictional power, most likely the power to exert punishment for transgressions and the possibility to declare war upon other societies. 
 
+Specifically, it is necessary to underline that despite the common name for this variable in the Ethnographic Atlas --- ``Political complexity'' --- it does not include politically complex systems such as the Kula exchange ring\citet{damon2002kula}, see Fig \ref{kula_ring}. Exchange systems of trade/debt are definitely complex and political, but they are not included in EA033 as they do not track \emph{vertical} complexity.
 
+\begin{figure}[ht]
+\centering
+\includegraphics[width=10cm]{latex/kula_ring_damon.png}
+\caption{Kula exchange ring, from \citet{damon2002kula}.}
+\label{kula_ring}
+\end{figure}
 
-\citep{damon2002kula}
-
-%kula_ring_damon
 
 The possible values societies can take for this variable of political complexity are:
 
