Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -2900,7 +2900,8 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
   title={Kula valuables: The problem of value and the production of names},
   author={Damon, Frederick H},
   journal={L’homme},
-  number={2},
+  volume={2},
+  number = {162},
   pages={107--136},
   year={2002},
   publisher={Cairn/Softwin}
