Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -882,6 +882,30 @@ This dataset does not contain information on population size because there is no
 \label{brms_medium_dropped_out_plot_diff}
 \end{figure}
 
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=15cm]{latex/SLOM_SBZR_all_variables.png}
+\caption{Scatterplot matrix of all variables available, over overnight-sailing-groups.}
+\label{SLOM_SBZR_all_variables}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=15cm]{latex/SLOM_medium_all_variables.png}
+\caption{Scatterplot matrix of all variables available, over shared-language-groups.}
+\label{SLOM_medium_all_variables}
+\end{figure}
+
+
+\begin{figure}[ht]
+\centering
+    \includegraphics[width=15cm]{latex/Map_RO_dates.png}
+\caption{Scatterplot matrix of all variables available, over shared-language-groups.}
+\label{SLOM_medium_all_variables}
+\end{figure}
+
+
 \newpage
 \subsection{R-packages used}
 \label{appendix_r_packages}
