Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -408,7 +408,7 @@ Future studies should use a grid and/or otherwise more fine grained approach to 
 \newpage
 \singlespacing
 \bibliographystyle{unified_edit_HS_SFM}
-\bibliography{latex/HS_Oceanic}
+\bibliography{latex/HS_Oceanic, }
 %\singlespacing
 
 
@@ -885,24 +885,24 @@ This dataset does not contain information on population size because there is no
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=15cm]{latex/SLOM_SBZR_all_variables.png}
+\includegraphics[width=15cm]{latex/SPLOM_SBZR_all_variables.png}
 \caption{Scatterplot matrix of all variables available, over overnight-sailing-groups.}
-\label{SLOM_SBZR_all_variables}
+\label{SPLOM_SBZR_all_variables}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=15cm]{latex/SLOM_medium_all_variables.png}
+\includegraphics[width=15cm]{latex/SPLOM_medium_all_variables.png}
 \caption{Scatterplot matrix of all variables available, over shared-language-groups.}
-\label{SLOM_medium_all_variables}
+\label{SPLOM_medium_all_variables}
 \end{figure}
 
 
 \begin{figure}[ht]
 \centering
-    \includegraphics[width=15cm]{latex/Map_RO_dates.png}
+    \includegraphics[width=15cm]{latex/SPLOM_country_all_variables.png}
 \caption{Scatterplot matrix of all variables available, over shared-language-groups.}
-\label{SLOM_medium_all_variables}
+\label{SPLOM_country_all_variables}
 \end{figure}
 
 
