--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -307,7 +307,7 @@ https://personality-project.org/r/psych-manual.pdf},
 @Article{colorspace2009a,
   title = {Escaping {RGB}land: Selecting Colors for Statistical Graphics},
   author = {Achim Zeileis and Kurt Hornik and Paul Murrell},
-  journal = {Computational Statistics \& Data Analysis},
+  journal = {Computational Statistics \\& Data Analysis},
   year = {2009},
   volume = {53},
   number = {9},
@@ -464,7 +464,7 @@ https://personality-project.org/r/psych-manual.pdf},
 @Article{spam2017,
   title = {Extending {R} packages to support 64-bit compiled code: An illustration with spam64 and {GIMMS} {NDVI3g} data},
   author = {Florian Gerber and Kaspar Moesinger and Reinhard Furrer},
-  journal = {Computer & Geoscience},
+  journal = {Computer \& Geoscience},
   year = {2017},
   volume = {104},
   pages = {109--119},
